# GrokLink-Firmware

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REPO_STRUCTURE.md  SECURITY.md  release-notes-v2.1.3.md  release-notes-v2.md
bridge/: README.md  pyproject.toml
bridge/groklink/: __init__.py  cli.py  safety.py
bridge/groklink/research/: __init__.py  anomaly.py  audit_dash.py  audit_pull.py  casefile.py  curriculum.py  delta.py  device_deploy.py  engagement.py  export_lab.py  graph.py  heartbeat.py  history.py  metrics.py  metrics_html.py  mission_compile.py  oracle.py  sd_deploy.py  sim_replay.py  stream.py  survey.py  vault.py
bridge/groklink/rpc/: __init__.py  client.py  transport.py
bridge/groklink/skills/: __init__.py  craft.py
bridge/tests/: test_client_sim.py  test_craft.py  test_lab_tools.py  test_more_lab.py  test_phase2_lab.py  test_survey.py  test_transport.py
docs/: AGENT_SKILLS.md  ARCHITECTURE.md  ASYNC_RADIO_DESIGN.md  BLE_STATUS_CHANNEL.md  BUILD_FLASH.md  EXPLORE_NOTES.md  EXTENSIBILITY_ML.md  FIELD_REPORT_V2.1.3.md  FIRST_DEPLOYMENT_REPORT.md  FULL_EXPLORE_REPORT.md  GROKRPC.md  HEALTHCARE_MEDSEC_PLAN.md  HEALTHCARE_OPERATOR_RUNBOOK.md  INTEGRATION_STATUS.md  MISSIONS.md  PRIVATE_VAULT.md  SAFETY.md  SKILL_ROUTER_MIRROR.md  V2_RELEASE_NOTES.md  WHAT_WE_LEARNED.md
examples/: boundary_explore_public.jsonl  explore_plus_prior.jsonl  first_deployment_survey.jsonl  full_explore_public.jsonl  full_explore_synth.jsonl  leisure_explore_public.jsonl  sample_capture.jsonl  terminal_grok_session.md  tx_path_session_public.jsonl  v2_suite_public.jsonl
(+93 files in other folders)
