[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groklink"
version = "2.1.3"
description = "GrokLink PC bridge  -  Flipper Zero hardware control for authorized research"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GrokLink Contributors" }]
dependencies = [
  "pyserial>=3.5",
  "click>=8.1",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
groklink = "groklink.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["groklink*"]
